--- a/about_us.html
+++ b/about_us.html
@@ -25,7 +25,7 @@
 			<div class="collapse navbar-collapse" id="navbarMenu">
 				<ul class="navbar-nav">
 					<div class="nav-item">
-						<a href="Index.html" class="nav-link"><b>HOME</b></a>
+						<a href="index.html" class="nav-link"><b>HOME</b></a>
 					</div>
 					<div class="nav-item">
 						<a href="events.html" class="nav-link"><b>EVENTS</b></a>
@@ -107,7 +107,7 @@
 		<div class="col-md-12">
 			<div class="footer-copyright text-center py-3">© 2020 Copyright:
 				<a class="url" href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
-				<a class="hide-on-desktop url" href="IndexGr.html"> - <span class="flag-icon flag-icon-gr"></span> Greek</a>
+				<a class="hide-on-desktop url" href="about_usGr.html"> - <span class="flag-icon flag-icon-gr"></span> Greek</a>
 			</div>
 			<script src="donation.js"></script>
 			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
