--- a/about_usGr.html
+++ b/about_usGr.html
@@ -25,7 +25,7 @@
 			<div class="collapse navbar-collapse" id="navbarMenu">
 				<ul class="navbar-nav">
 					<div class="nav-item">
-						<a href="IndexGr.html" class="nav-link"><b>ΑΡΧΙΚΗ</b></a>
+						<a href="indexGr.html" class="nav-link"><b>ΑΡΧΙΚΗ</b></a>
 					</div>
 					<div class="nav-item">
 						<a href="eventsGr.html" class="nav-link"><b>ΕΚΔΗΛΩΣΕΙΣ</b></a>
@@ -107,7 +107,7 @@
 		<div class="col-md-12">
 			<div class="footer-copyright text-center py-3">© 2020 Copyright:
 				<a class="url"  href="https://google.gr/"> Νικηφόρος_Ιωαννίδης.gr</a>
-				<a class="hide-on-desktop url" href="Index.html"> - <span class="flag-icon flag-icon-us"></span> English</a>
+				<a class="hide-on-desktop url" href="about_us.html"> - <span class="flag-icon flag-icon-us"></span> English</a>
 			</div>
 			<script src="donation.js"></script>
 			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
