--- a/eventsGr.html
+++ b/eventsGr.html
@@ -4,7 +4,7 @@
     <title>Fight Coronavirus (COVID-19)</title>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link rel="stylesheet" href="donation.css">
+    <link rel="stylesheet" href="./css/donation.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.6/css/flag-icon.min.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
 	<nav class="navbar navbar-expand-lg sticky-top">
 		<ul class="navbar mr-auto margin-bottom-0 width-full" >
 			<a class="navbar-brand" href="#">
-				<img id="logo" src="logo.png"/>
+				<img id="logo" src="./images/logo.png"/>
 			</a>
 			<h4 class="mobile-title hide-on-desktop margin-bottom-0 alignCenter" id="covid">COVID-19</h4>
 			<button class="navbar-toggler navbar-dark alignCenter align-items-center" data-toggle="collapse" data-target="#navbarMenu">
@@ -77,7 +77,7 @@
             </div>
             <div class="col-md-8 alignCenter">
                 <img class="show-on-tablet hide-on-mobile hide-on-desktop" src="stayHome.jpg" width="200px" height="100px"/>
-                <img class="show-on-desktop" src="stayHome.jpg" width="400px" height="300px"/>
+                <img class="show-on-desktop" src="./images/stayHome.jpg" width="400px" height="300px"/>
             </div>
             <div class="offset-2">
             </div>
