--- a/contact_usGr.html
+++ b/contact_usGr.html
@@ -81,10 +81,10 @@
 		</div>
 		<div class="row alignCenter">
 			<div class="col-md-6">
-				<img class="show-on-mobile" src="./images/googleMaps.PNG" width="300" height="230"/>
-				<img class="hide-on-mobile hide-on-desktop" id="mapTablet" src="./images/googleMaps.PNG" width="350" height="270"/>
+				<iframe class="show-on-mobile" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.6086770880306!2d23.760902715736506!3d37.986260779721626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a2aaab276ca1%3A0xdd23dbedfe7d2e17!2zzqbOtc65zrTOuc-Az4DOr860zr_PhSAxMywgQW1wZWxva2lwaSBNZW5lbWVuaSAxMTUgMjY!5e0!3m2!1sel!2sgr!4v1586085684959!5m2!1sel!2sgr" width="300" height="230" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> 
+				<iframe class="hide-on-mobile hide-on-desktop" id="mapTablet" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.6086770880306!2d23.760902715736506!3d37.986260779721626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a2aaab276ca1%3A0xdd23dbedfe7d2e17!2zzqbOtc65zrTOuc-Az4DOr860zr_PhSAxMywgQW1wZWxva2lwaSBNZW5lbWVuaSAxMTUgMjY!5e0!3m2!1sel!2sgr!4v1586085684959!5m2!1sel!2sgr" width="350" height="270" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				<br>
-				<img class="show-on-desktop" id="cont" src="./images/googleMaps.PNG" width="600" height="430"/>
+				<iframe class="show-on-desktop" id="cont" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.6086770880306!2d23.760902715736506!3d37.986260779721626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a2aaab276ca1%3A0xdd23dbedfe7d2e17!2zzqbOtc65zrTOuc-Az4DOr860zr_PhSAxMywgQW1wZWxva2lwaSBNZW5lbWVuaSAxMTUgMjY!5e0!3m2!1sel!2sgr!4v1586085684959!5m2!1sel!2sgr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				<br><br>
 			</div>
 			<div class="col-md-4">
